[lib]
crate-type = [
    'cdylib',
    'rlib',
]
[badges.is-it-maintained-issue-resolution]
repository = 'paritytech/substrate'

[badges.is-it-maintained-open-issues]
repository = 'paritytech/substrate'

[badges.maintenance]
status = 'actively-developed'

[badges.travis-ci]
branch = 'master'
repository = 'paritytech/substrate'

[features]
browser = [
    'browser-utils',
    'wasm-bindgen',
    'wasm-bindgen-futures',
]
cli = [
    'node-executor/wasmi-errno',
    'node-inspect',
    'node-transaction-factory',
    'sc-cli',
    'frame-benchmarking-cli',
    'sc-service/rocksdb',
    'structopt',
    'vergen',
]
default = [
    'cli',
    'wasmtime',
]
wasmtime = [
    'cli',
    'node-executor/wasmtime',
    'sc-cli/wasmtime',
    'sc-service/wasmtime',
]
[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[build-dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[build-dependencies.node-inspect]
optional = true
path = '../inspect'
version = '0.8.0'

[build-dependencies.node-transaction-factory]
optional = true
path = '../transaction-factory'
version = '0.8.0'

[build-dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
package = 'sc-cli'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8.0'

[build-dependencies.structopt]
optional = true
version = '0.3.8'

[build-dependencies.vergen]
optional = true
version = '3.0.4'

[dependencies]
hex-literal = '0.2.1'
jsonrpc-core = '14.0.3'
log = '0.4.8'
rand = '0.7.2'
tracing = '0.1.10'
serde_json = '1'

[dependencies.browser-utils]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.6'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.futures]
features = ['compat']
version = '0.3.1'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.node-executor]
path = '../executor'
version = '2.0.0'

[dependencies.node-inspect]
optional = true
path = '../inspect'
version = '0.8.0'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.node-rpc]
path = '../rpc'
version = '2.0.0'

[dependencies.node-runtime]
path = '../runtime'
version = '2.0.0'

[dependencies.node-transaction-factory]
optional = true
path = '../transaction-factory'
version = '0.8.0'

[dependencies.pallet-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-indices]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.pallet-transaction-payment]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sc-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8.0'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sc-client-db]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sc-offchain]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sc-service]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sc-tracing]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.serde]
features = ['derive']
version = '1.0.104'

[dependencies.sp-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sp-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-finality-tracker]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.structopt]
optional = true
version = '0.3.8'

[dependencies.wasm-bindgen]
optional = true
version = '0.2.57'

[dependencies.wasm-bindgen-futures]
optional = true
version = '0.4.7'

[[bin]]
name = 'substrate'
path = 'bin/main.rs'
required-features = ['cli']

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
default-run = 'substrate'
description = 'Substrate node implementation in Rust.'
edition = '2018'
license = 'GPL-3.0'
name = 'node-cli'
version = '2.0.0'
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
assert_cmd = '0.12'
futures = '0.3.1'
nix = '0.17'
tempfile = '3.1.0'

[dev-dependencies.sc-consensus-babe]
features = ['test-helpers']
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dev-dependencies.sc-consensus-epochs]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dev-dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.sc-service-test]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'
