[dependencies]
trie-root = '0.16.0'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.node-runtime]
path = '../runtime'
version = '2.0.0'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dependencies.sp-state-machine]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '0.8'

[dependencies.sp-trie]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Substrate node implementation in Rust.'
edition = '2018'
license = 'GPL-3.0'
name = 'node-executor'
version = '2.0.0'

[features]
stress-test = []
wasmi-errno = ['sc-executor/wasmi-errno']
wasmtime = ['sc-executor/wasmtime']

[[bench]]
harness = false
name = 'bench'

[dev-dependencies]
criterion = '0.3.0'
wabt = '0.9.2'

[dev-dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.node-testing]
path = '../testing'
version = '2.0.0'

[dev-dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.pallet-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.pallet-im-online]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.pallet-indices]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.pallet-session]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.pallet-timestamp]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.pallet-transaction-payment]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.pallet-treasury]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.sp-application-crypto]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'

[dev-dependencies.substrate-test-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8'
version = '2.0.0'
