[features]
stress-test = []
wasmi-errno = ['sc-executor/wasmi-errno']
wasmtime = ['sc-executor/wasmtime']

[[bench]]
harness = false
name = 'bench'

[dev-dependencies]
criterion = '0.3.0'
wabt = '0.9.2'

[dev-dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.node-testing]
path = '../testing'
version = '2.0.0-alpha.5'

[dev-dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.pallet-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.pallet-im-online]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.pallet-indices]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.pallet-session]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.pallet-timestamp]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.pallet-transaction-payment]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.pallet-treasury]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.sp-application-crypto]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.sp-externalities]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dev-dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies.substrate-test-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-dev'

[dependencies]
trie-root = '0.16.0'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0-alpha.5'

[dependencies.node-runtime]
path = '../runtime'
version = '2.0.0-alpha.5'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-state-machine]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '0.8.0-alpha.5'

[dependencies.sp-trie]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Substrate node implementation in Rust.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL-3.0'
name = 'node-executor'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.5'
