[features]
default = ['std']
std = [
    'sp-core/std',
    'sp-runtime/std',
]
[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[dev-dependencies]
pretty_assertions = '0.6.1'

[dev-dependencies.sp-serializer]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL-3.0'
name = 'node-primitives'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.5'
