[dependencies]
env_logger = '0.7.0'
futures = '0.1.29'
hyper = '0.12.35'
log = '0.4.8'

[dependencies.jsonrpc-core-client]
features = [
    'http',
    'ws',
]
version = '14.0.3'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0-alpha.5'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '6ce091737dc7f114dd420f8b879f8a467c1d501b'
version = '2.0.0-alpha.5'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL-3.0'
name = 'node-rpc-client'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.5'
